<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chronos</string>
    <string name="app_name_stopwatches">Chronos-Stopwatches</string>
    <string name="bnt_moins_txt">_</string>
    <string name="btn_plus_txt">+</string>
    <string name="txt_view_name_text">Name : </string>
    <string name="txt_view_type_text">Type : </string>
    <string name="txt_view_distance_text">Distance : </string>
    <string name="txt_view_units">Units : </string>
    <string name="txt_view_d_text">Distances :</string>
    <string name="txt_view_speed_text">Speed : </string>
    <string name="cm_long">Centimeter</string>
    <string name="cm_short">cm</string>
    <string name="cms">cm/s</string>
    <string name="cmh">cm/h</string>
    <string name="m_long">Meter</string>
    <string name="m_short">m</string>
    <string name="ms">m/s</string>
    <string name="mh">m/h</string>
    <string name="km_long">Kilometer</string>
    <string name="km_short">km</string>
    <string name="kms">km/s</string>
    <string name="kmh">km/h</string>
    <string name="ft_long">Foot</string>
    <string name="ft_short">ft</string>
    <string name="fts">ft/s</string>
    <string name="fth">ft/h</string>
    <string name="mi_long">Mile</string>
    <string name="mi_short">mi</string>
    <string name="mps">mi/s</string>
    <string name="mph">mph</string>
    <string name="n.m_long">Nautical Mile</string>
    <string name="n.m_short">n.m</string>
    <string name="nms">n.m/s</string>
    <string name="kt">kt</string>
    <string name="btn_stopwatchActivity">Stopwatches</string>
    <string name="btn_timerActivity">Timer</string>
    <string name="btn_alarmActivity">Alarms</string>
    <string name="btn_metronome">Metronome</string>
    <string name="img_btn_moins">Remove last stopwatch from the list</string>
    <string name="basic">Simple</string>
    <string name="laps">By laps</string>
    <string name="segments">Segments</string>
    <string name="times">Times</string>
    <string name="msg_max_stopwatch_count">" stopwatches !!!!! Can\'t add any more stopwatches"</string>
    <string name="msg_first_stopwatch_no_delete">The first stopwatch can\'t be deleted.</string>
    <string name="msg_only_delete_last">You can delete only the last stopwatch. But it is running. Stop it, then delete.</string>
    <string name="klap">lap</string>
    <string name="klaps">laps</string>
    <string name="title_stopwatch_params">Stopwatches Parameters</string>
    <string name="validate">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="snd_file_notif_pref_title">"Select a music file for sound notification"</string>
    <string name="snd_ringtone_notif_pref_title">"Select a ringtone for sound notification"</string>
    <string name="error_report">Report this message at tmargenstern@gmail.com.</string>
    <string name="pref_access_failed_prefix">Unable to access preferences due to a missing prefix.</string>
    <string name="app_name_timer">Chonos - Timer</string>
    <string name="audio_pref_title">Audio Notification Preferences</string>
    <string name="pref_access_failed_fragment">Unable to access preferences du to a missing fragment</string>
    <string name="timeout">since timer finished.</string>
    <string name="lab_volFixe_text">Fixed Volume Level</string>
    <string name="lab_volVariable_text">Progressive Volume Level</string>
    <string name="timer_pref_not_set">Set audio preferences before starting the timer !</string>
    <string name="audio_pref_stored">Preferences stored</string>
    <string name="audio_pref_stored_but">Preferences stored, but no audio file set</string>
    <string name="label_soundFile">Sound from audio file</string>
    <string name="label_ringtone">Sound from device ringtone</string>
    <string name="unknown_artist">unknown artist</string>
    <string name="unknown_title">unknown title</string>
    <string name="db_init_failed">Error on dataBase access initialization</string>
    <string name="store_run_stwtc">There is a running stopwatch ! Do you want to save it ?</string>
    <string name="store_run_stwtces">There are a running stopwatches ! Do you want to save them ?</string>
</resources>