<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ $CLASS_NAME
  ~
  ~   Copyright (c) 2014 Thierry Margenstern under MIT license
  ~   http://opensource.org/licenses/MIT
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_view_name_text"
                android:id="@+id/txt_view_name" android:layout_column="1"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edt_txt_name" android:layout_column="2" android:layout_span="2"
                />
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_view_type_text"
                android:id="@+id/txt_view_type" android:layout_column="1"/>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spin_type" android:layout_column="2" android:spinnerMode="dropdown"
                android:layout_span="2"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_view_units"
                android:id="@+id/txt_view_units" android:layout_column="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:text="@string/txt_view_d_text"
                android:id="@+id/txt_view_d" android:layout_column="2"
                android:layout_gravity="center_vertical"/>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spin_units_distance" android:layout_column="3" android:spinnerMode="dropdown"
                android:clickable="true" android:focusable="false" android:focusableInTouchMode="false"
                />
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_marginLeft="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_view_speed_text"
                android:id="@+id/txt_view_speed" android:layout_column="2"
                android:textAppearance="@android:style/TextAppearance.Small" android:layout_gravity="center_vertical"/>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spin_speed" android:layout_column="3"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_view_distance_text"
                android:id="@+id/txt_view_distance" android:layout_column="1" android:layout_marginLeft="5dp"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edt_txt_distance" android:layout_column="2" android:layout_span="2"/>
    </TableRow>
</TableLayout>