<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ${NAME}
  ~
  ~ Copyright (c) 2015 Thierry Margenstern under MIT license
  ~ http://opensource.org/licenses/MIT
  -->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:columnCount="2" android:rowCount="14"
              android:id="@+id/idpreftimer">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/label_soundFile"
            android:id="@+id/label_music_file" android:layout_row="0" android:layout_column="0"
            android:clickable="true" android:enabled="true" android:layout_marginBottom="@dimen/button_marginLeft"
            android:width="300dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_view_selectedMusicFile" android:layout_row="1" android:layout_column="0" android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/button_marginLeft"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckb_music_file" android:layout_row="0" android:layout_column="1"
            android:layout_gravity="right" android:layout_marginBottom="@dimen/button_marginLeft"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/txt_view_line" android:layout_row="2" android:layout_column="0" android:layout_columnSpan="2"
            android:background="#ff535353"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_ringtone"
            android:id="@+id/label_ringtone" android:layout_row="3" android:layout_column="0"
            android:layout_marginTop="@dimen/button_marginLeft" android:width="300dp"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckb_ringtone" android:layout_row="3" android:layout_column="1"
            android:layout_gravity="right" android:layout_marginTop="@dimen/button_marginLeft"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_view_selectedRingtone" android:layout_row="4" android:layout_column="0" android:layout_columnSpan="2"
            android:layout_marginBottom="@dimen/button_marginLeft"/>
    <TextView android:layout_width="match_parent" android:layout_height="2dp" android:id="@+id/txt_view_line2"
              android:layout_row="5" android:layout_column="0"
              android:background="#ff535353" android:layout_columnSpan="2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lab_volFixe_text"
            android:id="@+id/lab_volFixe" android:layout_row="6" android:layout_column="0"
            android:layout_marginTop="@dimen/button_marginLeft"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckb_volFixe" android:layout_row="6" android:layout_column="1"
            android:layout_gravity="right" android:layout_marginTop="@dimen/button_marginLeft"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lab_volVariable_text"
            android:id="@+id/lab_VolVariable" android:layout_row="7" android:layout_column="0"
            android:layout_marginTop="@dimen/button_marginLeft"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckb_volVariable" android:layout_row="7" android:layout_column="1"
            android:layout_gravity="right" android:layout_marginTop="@dimen/button_marginLeft"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_row="9" android:layout_column="0"
            android:layout_columnSpan="2" android:id="@+id/layout_button">
        <ImageButton android:layout_width="@dimen/button_size" android:layout_height="@dimen/button_size"
                     android:id="@+id/btn_play" android:layout_row="10" android:layout_column="0"
                     android:layout_marginTop="@dimen/TenDP" android:background="@drawable/playall96x96"
                     android:layout_marginLeft="@dimen/button_marginLeft" android:layout_marginBottom="@dimen/TenDP"/>
        <ImageButton
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:id="@+id/btn_stop" android:layout_marginTop="@dimen/TenDP"
                android:background="@drawable/stop128x128" android:layout_marginLeft="@dimen/button_marginLeft"
                android:layout_marginBottom="@dimen/TenDP"/>
    </LinearLayout>
    <view android:layout_width="match_parent"
          android:layout_height="60dp"
          class="tm.android.chronos.uicomponent.MinMaxSeekBar" android:id="@+id/seek_bar_custom" android:layout_row="10"
          android:layout_column="0" android:layout_marginTop="@dimen/TenDP"
          android:layout_marginBottom="@dimen/TenDP" android:layout_columnSpan="2"
            />
</GridLayout>